[package]
name = "k256"
version = "0.14.0-rc.0"
description = """
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification/public-key recovery, Taproot Schnorr signatures (BIP340),
Elliptic Curve Diffie-Hellman (ECDH), and general-purpose secp256k1 elliptic
curve group operations which can be used to implement arbitrary protocols
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/k256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]
edition = "2024"
rust-version = "1.85"

[dependencies]
cfg-if = "1.0"
elliptic-curve = { version = "0.14.0-rc.16", default-features = false, features = ["sec1"] }
hash2curve = { version = "0.14.0-rc.3", optional = true }

# optional dependencies
ecdsa-core = { version = "0.17.0-rc.8", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "1", optional = true }
primeorder = { version = "0.14.0-rc.0", optional = true }
serdect = { version = "0.4", optional = true, default-features = false }
sha2 = { version = "0.11.0-rc.2", optional = true, default-features = false }
signature = { version = "3.0.0-rc.4", optional = true }

[dev-dependencies]
criterion = "0.7"
ecdsa-core = { version = "0.17.0-rc.8", package = "ecdsa", default-features = false, features = ["dev"] }
hex = "0.4.3"
hex-literal = "1"
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.7"
rand_core = { version = "0.9", features = ["os_rng"] }
sha3 = { version = "0.11.0-rc.3", default-features = false }

[features]
default = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std"]

arithmetic = ["elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
critical-section = ["elliptic-curve/critical-section", "precomputed-tables"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha256"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "dep:hash2curve", "dep:primeorder", "primeorder/hash2curve"]
group-digest = ["hash2curve", "sha2"]
pem = ["ecdsa-core/pem", "elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
precomputed-tables = ["arithmetic", "elliptic-curve/basepoint-table"]
schnorr = ["arithmetic", "sha256", "signature"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "pkcs8", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "schnorr"]

[[bench]]
name = "ecdsa"
harness = false
required-features = ["ecdsa", "sha256"]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false
