[package]
name = "k256"
version = "0.14.0-rc.15"
description = """
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification/public-key recovery, Taproot Schnorr signatures (BIP340),
Elliptic Curve Diffie-Hellman (ECDH), and general-purpose secp256k1 elliptic
curve group operations which can be used to implement arbitrary protocols
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/k256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]
edition = "2024"
rust-version = "1.85"

[dependencies]
cpubits = "0.1"
elliptic-curve = { version = "0.14.1", default-features = false, features = ["sec1"] }
hash2curve = { version = "0.14", optional = true }

# optional dependencies
ecdsa-core = { version = "0.17", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "1", optional = true }
primeorder = { version = "0.14.0-rc.15", optional = true }
serdect = { version = "0.4", optional = true, default-features = false }
sha2 = { version = "0.11", optional = true, default-features = false }
signature = { version = "3", optional = true }
wnaf = { version = "0.14", default-features = false }

[dev-dependencies]
criterion = "0.7"
ecdsa-core = { version = "0.17", package = "ecdsa", default-features = false, features = ["dev"] }
hex = "0.4.3"
hex-literal = "1"
num-bigint = "0.4"
num-traits = "0.2"
proptest = "1.11"
sha3 = { version = "0.12", default-features = false }

[features]
default = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "getrandom", "primeorder?/std"]

arithmetic = ["elliptic-curve/arithmetic", "dep:primeorder"]
critical-section = ["primeorder/critical-section", "precomputed-tables"]
digest = ["ecdsa-core/digest"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha256"]
hash2curve = ["arithmetic", "dep:hash2curve", "primeorder/hash2curve"]
group-digest = ["hash2curve", "sha2"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
pem = ["ecdsa-core/pem", "elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
precomputed-tables = ["arithmetic", "primeorder/basepoint-table"]
schnorr = ["arithmetic", "sha256", "signature"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "pkcs8", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(cpubits, values("16", "32", "64"))']

[[bench]]
name = "ecdsa"
harness = false
required-features = ["ecdsa", "sha256"]

[[bench]]
name = "field"
harness = false

[[bench]]
name = "point"
harness = false

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "schnorr"
harness = false
required-features = ["schnorr"]

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "schnorr"]
