[package]
name = "k256"
version = "0.14.0-rc.15"
description = """
secp256k1 elliptic curve library written in pure Rust with support for ECDSA
signing/verification/public-key recovery, Taproot Schnorr signatures (BIP340),
Elliptic Curve Diffie-Hellman (ECDH), and general-purpose secp256k1 elliptic
curve group operations which can be used to implement arbitrary protocols
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/k256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]
edition = "2024"
rust-version = "1.85"

[dependencies]
cpubits = "0.1"
elliptic-curve = { version = "0.14.1", default-features = false, features = ["sec1"] }
hash2curve = { version = "0.14", optional = true }

# optional dependencies
ecdsa-core = { version = "0.17", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "1", optional = true }
primeorder = { version = "0.14", optional = true }
serdect = { version = "0.4", optional = true, default-features = false }
sha2 = { version = "0.11", optional = true, default-features = false }
signature = { version = "3", optional = true }
wnaf = { version = "0.14", default-features = false }

[dev-dependencies]
criterion = "0.7"
ecdsa-core = { version = "0.17", package = "ecdsa", default-features = false, features = ["dev"] }
hex = "0.4.3"
hex-literal = "1"
num-bigint = "0.5"
num-traits = "0.2"
proptest = "1.11"
sha3 = { version = "0.12", default-features = false }

[features]
default = ["arithmetic", "ecdsa", "pkcs8", "precomputed-tables", "schnorr", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "getrandom", "primeorder?/std"]

arithmetic = ["elliptic-curve/arithmetic", "dep:primeorder"]
critical-section = ["primeorder/critical-section", "precomputed-tables"]
digest = ["ecdsa-core/digest"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha256"]
hash2curve = ["arithmetic", "dep:hash2curve", "primeorder/hash2curve"]
group-digest = ["hash2curve", "sha2"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
pem = ["ecdsa-core/pem", "elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
precomputed-tables = ["arithmetic", "primeorder/basepoint-table"]
schnorr = ["arithmetic", "sha256", "signature"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "pkcs8", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["hex-literal"]

[[bench]]
name = "ecdsa"
harness = false
required-features = ["ecdsa", "sha256"]

[[bench]]
name = "field"
harness = false

[[bench]]
name = "point"
harness = false

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "schnorr"
harness = false
required-features = ["schnorr"]

# NOTE: these are the only lints we explicitly want to configure for k256
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(cpubits, values("16", "32", "64"))']

# NOTE: can't use `lints.workspace` because we override `lints.rust.unexpected_cfgs`
[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

# NOTE: can't use `lints.workspace` because we override `lints.rust.unexpected_cfgs`
[lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
from_iter_instead_of_collect = "warn"
implicit_saturating_sub = "warn"
manual_assert = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
must_use_candidate = "warn"
needless_range_loop = "allow"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
ref_as_ptr = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
trivially_copy_pass_by_ref = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

[package.metadata.docs.rs]
features = ["ecdh", "ecdsa", "schnorr"]
