[package]
name = "p224"
version = "0.13.0"
description = """
Pure Rust implementation of the NIST P-224 (a.k.a. secp224r1) elliptic curve
as defined in SP 800-186
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p224"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/p224"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp224r1"]
edition = "2021"
rust-version = "1.65"

[dependencies]
elliptic-curve = { version = "0.13", default-features = false, features = ["hazmat", "sec1"] }
hex-literal = { version = "0.4", optional = true }

# optional features
primeorder = { version = "0.13", optional = true, path = "../primeorder" }

[dev-dependencies]
hex-literal = "0.4"
primeorder = { version = "0.13", features = ["dev"], path = "../primeorder" }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["pem", "std"]
alloc = ["elliptic-curve/alloc"]
std = ["alloc", "elliptic-curve/std"]

ecdh = ["wip-arithmetic-do-not-use", "elliptic-curve/ecdh"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["elliptic-curve/pkcs8"]
test-vectors = ["dep:hex-literal"]
wip-arithmetic-do-not-use = ["dep:primeorder"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
