[package]
name = "p256"
version = "0.14.0-pre.9"
description = """
Pure Rust implementation of the NIST P-256 (a.k.a. secp256r1, prime256v1)
elliptic curve as defined in SP 800-186, with support for ECDH, ECDSA
signing/verification, and general purpose curve arithmetic
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p256"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/p256"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "prime256v1", "secp256r1"]
edition = "2024"
rust-version = "1.85"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.10", default-features = false, features = ["sec1"] }

# optional dependencies
ecdsa-core = { version = "0.17.0-rc.4", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hash2curve = { version = "0.14.0-rc.0", optional = true }
hex-literal = { version = "1", optional = true }
primefield = { version = "=0.14.0-pre.4", optional = true }
primeorder = { version = "=0.14.0-pre.7", optional = true }
serdect = { version = "0.3", optional = true, default-features = false }
sha2 = { version = "0.11.0-rc.0", optional = true, default-features = false }

[dev-dependencies]
blobby = "0.3"
criterion = "0.7"
ecdsa-core = { version = "0.17.0-rc.4", package = "ecdsa", default-features = false, features = ["dev"] }
hex-literal = "1"
primefield = { version = "=0.14.0-pre.4" }
primeorder = { version = "=0.14.0-pre.7", features = ["dev"] }
proptest = "1"
rand_core = { version = "0.9", features = ["os_rng"] }

[features]
default = ["arithmetic", "ecdsa", "pem", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std"]

arithmetic = ["dep:primefield", "dep:primeorder", "elliptic-curve/arithmetic"]
bits = ["arithmetic", "elliptic-curve/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/signing", "ecdsa-core/verifying", "sha256"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "dep:hash2curve"]
jwk = ["elliptic-curve/jwk"]
oprf = ["hash2curve", "sha2"]
pem = ["elliptic-curve/pem", "ecdsa-core/pem", "pkcs8"]
pkcs8 = ["ecdsa-core?/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core?/serde", "elliptic-curve/serde", "primeorder?/serde", "serdect"]
sha256 = ["digest", "sha2"]
test-vectors = ["dep:hex-literal"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false
