[package]
name = "p384"
version = "0.10.0-pre" # Also update html_root_url in lib.rs when bumping this
description = "NIST P-384 (secp384r1) elliptic curve"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/elliptic-curve"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/p384"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp384r1"]
edition = "2021"
rust-version = "1.57"

[dependencies]
ecdsa = { version = "0.14.0-pre.2", optional = true, default-features = false, features = ["der"] }
elliptic-curve = { version = "0.12.0-pre.1", default-features = false, features = ["hazmat", "sec1"] }
sec1 = { version = "0.2", default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["pkcs8", "std"]
broken-arithmetic-do-not-use = ["elliptic-curve/arithmetic"]
jwk = ["elliptic-curve/jwk"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa/serde", "elliptic-curve/serde", "sec1/serde"]
sha384 = ["ecdsa/digest", "ecdsa/hazmat", "sha2"]
std = ["elliptic-curve/std"]
voprf = ["elliptic-curve/voprf", "sha2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
