[package]
name = "p384"
version = "0.12.0-pre.1"
description = """
Pure Rust implementation of the NIST P-384 (a.k.a. secp384r1) elliptic curve
with support for ECDH, ECDSA signing/verification, and general purpose curve
arithmetic support.
"""
authors = ["RustCrypto Developers", "Frank Denis <github@pureftpd.org>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p384"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/p384"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp384r1"]
edition = "2021"
rust-version = "1.57"

[dependencies]
elliptic-curve = { version = "0.12", default-features = false, features = ["hazmat", "sec1"] }
primeorder = { version = "=0.0.2", path = "../primeorder" }

# optional dependencies
ecdsa-core = { version = "=0.15.0-pre.1", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "0.3", optional = true }
serdect = { version = "0.1", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }

[dev-dependencies]
blobby = "0.3"
criterion = "0.4"
ecdsa-core = { version = "=0.15.0-pre.1", package = "ecdsa", default-features = false, features = ["dev"] }
hex-literal = "0.3"
proptest = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["arithmetic", "ecdh", "ecdsa", "pem", "std"]
alloc = ["elliptic-curve/alloc"]
std = ["alloc", "ecdsa-core/std", "elliptic-curve/std"] # TODO: use weak activation for `ecdsa-core/std` when available

arithmetic = ["elliptic-curve/arithmetic", "elliptic-curve/digest"]
bits = ["arithmetic", "elliptic-curve/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/sign", "ecdsa-core/verify", "sha384"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "elliptic-curve/hash2curve"]
jwk = ["elliptic-curve/jwk"]
pem = ["elliptic-curve/pem", "ecdsa-core/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core/serde", "elliptic-curve/serde", "serdect"]
sha384 = ["digest", "sha2"]
test-vectors = ["hex-literal"]
voprf = ["elliptic-curve/voprf", "sha2"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false
