[package]
name = "p384"
version = "0.14.0-pre.2"
description = """
Pure Rust implementation of the NIST P-384 (a.k.a. secp384r1) elliptic curve
as defined in SP 800-186 with support for ECDH, ECDSA signing/verification,
and general purpose curve arithmetic support.
"""
authors = ["RustCrypto Developers", "Frank Denis <github@pureftpd.org>"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p384"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/p384"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp384r1"]
edition = "2021"
rust-version = "1.73"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.0", default-features = false, features = ["sec1"] }

# optional dependencies
ecdsa-core = { version = "=0.17.0-pre.9", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hex-literal = { version = "0.4", optional = true }
primeorder = { version = "=0.14.0-pre.2", optional = true, path = "../primeorder" }
serdect = { version = "0.3.0-rc.0", optional = true, default-features = false }
sha2 = { version = "=0.11.0-pre.4", optional = true, default-features = false }

[dev-dependencies]
blobby = "0.3"
criterion = "0.5"
ecdsa-core = { version = "=0.17.0-pre.9", package = "ecdsa", default-features = false, features = ["dev"] }
hex-literal = "0.4"
primeorder = { version = "=0.14.0-pre.2", features = ["dev"], path = "../primeorder" }
proptest = "1.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["arithmetic", "ecdh", "ecdsa", "pem", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std"]

arithmetic = ["dep:primeorder", "elliptic-curve/arithmetic", "elliptic-curve/digest"]
bits = ["arithmetic", "elliptic-curve/bits"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/signing", "ecdsa-core/verifying", "sha384"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "elliptic-curve/hash2curve"]
jwk = ["elliptic-curve/jwk"]
pem = ["elliptic-curve/pem", "ecdsa-core/pem", "pkcs8"]
pkcs8 = ["ecdsa-core/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core?/serde", "elliptic-curve/serde", "primeorder?/serde", "serdect"]
sha384 = ["digest", "sha2"]
test-vectors = ["hex-literal"]
voprf = ["elliptic-curve/voprf", "sha2"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false
