[package]
name = "p521"
version = "0.14.0-rc.0"
description = """
Pure Rust implementation of the NIST P-521 (a.k.a. secp521r1) elliptic curve
as defined in SP 800-186
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/p521"
homepage = "https://github.com/RustCrypto/elliptic-curves/tree/master/p521"
repository = "https://github.com/RustCrypto/elliptic-curves"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp521r1"]
edition = "2024"
rust-version = "1.85"

[dependencies]
base16ct = "0.3"
elliptic-curve = { version = "0.14.0-rc.17", default-features = false, features = ["sec1"] }

# optional dependencies
ecdsa-core = { version = "0.17.0-rc.9", package = "ecdsa", optional = true, default-features = false, features = ["der"] }
hash2curve = { version = "0.14.0-rc.3", optional = true }
hex-literal = { version = "1", optional = true }
primefield = { version = "0.14.0-rc.0", optional = true }
primeorder = { version = "0.14.0-rc.0", optional = true }
rand_core = { version = "0.10.0-rc-2", optional = true, default-features = false }
serdect = { version = "0.4", optional = true, default-features = false }
sha2 = { version = "0.11.0-rc.3", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.7"
ecdsa-core = { version = "0.17.0-rc.9", package = "ecdsa", default-features = false, features = ["dev"] }
hex-literal = "1"
primeorder = { version = "0.14.0-rc.0", features = ["dev"] }
proptest = "1.9"
rand = "0.10.0-rc.1"

[features]
default = ["arithmetic", "ecdsa", "pem", "std"]
alloc = ["ecdsa-core?/alloc", "elliptic-curve/alloc", "primeorder?/alloc"]
std = ["alloc", "ecdsa-core?/std", "elliptic-curve/std", "getrandom"]

arithmetic = ["dep:primefield", "dep:primeorder"]
digest = ["ecdsa-core/digest", "ecdsa-core/hazmat"]
ecdh = ["arithmetic", "elliptic-curve/ecdh"]
ecdsa = ["arithmetic", "ecdsa-core/algorithm", "sha512"]
expose-field = ["arithmetic"]
hash2curve = ["arithmetic", "dep:hash2curve", "primeorder/hash2curve"]
getrandom = ["ecdsa-core?/getrandom", "elliptic-curve/getrandom"]
group-digest = ["hash2curve", "dep:sha2"]
oprf = ["group-digest"]
pem = ["elliptic-curve/pem", "pkcs8"]
pkcs8 = ["ecdsa-core?/pkcs8", "elliptic-curve/pkcs8"]
serde = ["ecdsa-core?/serde", "elliptic-curve/serde", "primeorder?/serde", "serdect"]
sha512 = ["digest", "dep:sha2"]
test-vectors = ["dep:hex-literal"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "field"
harness = false
required-features = ["expose-field"]

[[bench]]
name = "scalar"
harness = false
